# quant-monitor-desk

./: .env.example  .gitignore  .lintstagedrc  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT.md  FINAL_AUDIT_REPORT.md  M-DATA-03-EXECUTE-COORDINATOR-HANDOFF.md  M-DATA-03-HANDOFF.md  MANIFEST.json  MIGRATION_MAP.md  MODULE_COMPLETION_RATING.md  M_G1_03_COORDINATOR_HANDOFF.md  PROJECT_IMPLEMENTATION_ROADMAP.legacy-20260629.md  PROJECT_IMPLEMENTATION_ROADMAP.md  README.md  ROUND2_ABCD_9_AGENT_ADVERSARIAL_AUDIT_SUMMARY.md  ROUND2_REAUDIT_CLOSEOUT.md  ROUND3_BATCH_IMPLEMENTATION_MAP.md  WAVE3_PRODUCTION_ACCEPTANCE_REPORT.md  WAVE_C_MAIN_SESSION_COORDINATOR_PLAYBOOK.md  agent-toolchain.md  completion-check.project.md  note.md  package-lock.json  package.json  pyproject.toml  pytest.ini
.cursor/: mcp.json
.husky/: pre-commit
.trellis/: .template-hashes.json  workflow.md
_tmp-wave4-dcp-parallel/: README.md
agents/: README.md  ai-writing-auditor.md  api-designer.md  architect-reviewer.md  audit-a1-spec.md  audit-a2-ponytail.md  audit-a5-completion.md  audit-adversarial-authority.md  audit-boot-v4.1.md  audit-boot-v4.2.md  audit-coverage-model.md  audit-finding-schema.md  backend-developer.md  cli-developer.md  code-reviewer.md  data-engineer.md  database-administrator.md  database-optimizer.md  debugger.md  devops-incident-responder.md  documentation-engineer.md  error-detective.md  fastapi-developer.md  frontend-developer.md  git-workflow-manager.md  mcp-developer.md  performance-engineer.md  qa-expert.md  quant-analyst.md  readme-generator.md  refactoring-specialist.md  repair-boot-v4.1.md  repair-boot-v4.2.md  risk-manager.md  security-auditor.md  sql-pro.md  sre-engineer.md  test-automator.md  tooling-engineer.md
completion-check/: CONTRACT.md  EVALS.md  README.md  REFERENCE.md
configs/: alert.yml  datasource.yml  layer1_axes.yml  market_registry.yml  qmt.yml  resource_limits.yaml
docs/: AUDIT_DEFERRED_REGISTRY.md  DEVELOPER_GUIDE.md  INDEX.md  OPERATOR_GUIDE.md  RESOLVED_ISSUES_REGISTRY.md  ROUND3_HANDOFF.md  START_HERE.md  UNRESOLVED_ISSUES_REGISTRY.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
openwiki/: .last-update.json  agent-guide.md  quickstart.md
phase-scripts/: check_acceptance_e2e_bootstrap_path.py  check_b3f_sh_no_false_close.py  check_cn_market_capabilities_registry.py  check_data_cli_contract_phase.py  check_data_health_tier_a_profile_contract.py  check_fred_source_registry_policy.py  check_g1_02_esr_fixture_hygiene.py  check_layer1_axis_spec_inventory.py  check_layer1_k1_whitelist_parity.py  (+17 more)
(+5592 files in other folders)
