[project]
name = "quant-monitor-desk"
version = "0.1.0"
description = "Local-first quantitative monitoring console"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "fastapi>=0.115.0",
    "psutil>=6.0.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "scripts", "tests"]
exclude = [".trellis", ".cursor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
