[project]
name = "quant-monitor-desk"
version = "0.1.0"
description = "Local-first quantitative monitoring console"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "fastapi>=0.115.0",
    "psutil>=6.0.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx2>=2.0.0",
    "ruff>=0.8.0",
]
live-pilot = [
    "baostock>=0.8.8",
    "akshare>=1.14.0",
    "pandas>=2.2.0",
]

[project.scripts]
qmd-data = "backend.app.cli.main:main"
qmd-ops = "scripts.qmd_ops:main"
qmd-init-db = "scripts.init_db:main"
qmd-sync-registry = "scripts.sync_registry:main"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --basetemp=.audit-sandbox/pytest"
cache_dir = ".audit-sandbox/.pytest_cache"
markers = [
    "slow: integration or full-pipeline tests; exclude with pytest -m 'not slow' for quick CI",
    "network: live vendor fetch tests; skipped unless --run-network",
]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "scripts", "tests"]
exclude = [".trellis", ".cursor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
